# crc-atom-to-atom-mapping

./: .gitignore  LICENSE  README.md  environment.yaml  setup.cfg
crc_a2am/: __init__.py
crc_a2am/chytorch_rxnmap/: __init__.py  atom_to_atom_mapping.py
crc_a2am/epam_indigo/: __init__.py  atom_to_atom_mapping.py
crc_a2am/rxnmapper/: __init__.py  atom_to_atom_mapping.py
literature/: 20210407_schwaller_et_al.md  20220706_nugmanov_et_al.md
scripts/: map_reaction_smiles.py
