[metadata]
name = crc_a2am
version = 2024.3.1
author = Haris Hasic
author_email = hasic@cb.cs.titech.ac.jp, haris.hasic@elix-inc.com
description = The chemical reaction compound atom-to-atom mapping repository.
long_description = file: README.md, LICENSE.txt
keywords = atom-to-atom-mapping, chytorch-rxnmap, epam-indigo, rxnmapper
